force-app/main/default/objects/TC_Account__x/TC_Account__x.object-meta.xml
<CustomObject>
    <description>Replaced by TC accounts hen we switched to Read/Write

Hospitality Org connects to the TravelClick Org using Salesforce Connect Cross Org Adapter</description>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>Account</externalName>
    <label>TC Account1</label>
    <pluralLabel>TC Accounts</pluralLabel>
</CustomObject>