force-app/main/default/objects/TC_Account__x/fields/Account_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Comments_c__c</fullName>
    <externalDeveloperName>Account_Comments__c</externalDeveloperName>
    <inlineHelpText>Use this field to enter account related short comments</inlineHelpText>
    <label>Account Comments</label>
    <length>50</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>