force-app/main/default/objects/TC_Account__x/fields/Account_Plan_Health_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Health_c__c</fullName>
    <externalDeveloperName>Account_Plan_Health__c</externalDeveloperName>
    <label>Account Plan Health</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>