force-app/main/default/objects/TC_Account__x/fields/Account_Record_Type_Conversion_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Conversion_c__c</fullName>
    <externalDeveloperName>Account_Record_Type_Conversion__c</externalDeveloperName>
    <label>Account Record Type (Conversion)</label>
    <length>40</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>