force-app/main/default/objects/TC_Account__x/fields/Account_Segmentation_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Segmentation_c__c</fullName>
    <externalDeveloperName>Account_Segmentation__c</externalDeveloperName>
    <label>Account Segmentation</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Core High Value</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Enterprise HVA</fullName>
            </value>
            <value>
                <fullName>Enterprise SEO</fullName>
            </value>
            <value>
                <fullName>Ent-HVA</fullName>
            </value>
            <value>
                <fullName>Ent-Strategic</fullName>
            </value>
            <value>
                <fullName>Global Chain</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>INT Bundle</fullName>
            </value>
            <value>
                <fullName>INT Bundle**NEW</fullName>
            </value>
            <value>
                <fullName>INT Bundle CXL/Terminated</fullName>
            </value>
            <value>
                <fullName>INT Bundle Growth</fullName>
            </value>
            <value>
                <fullName>INT GMS</fullName>
            </value>
            <value>
                <fullName>INT Greenfield</fullName>
            </value>
            <value>
                <fullName>INT Group</fullName>
            </value>
            <value>
                <fullName>INT High Potential</fullName>
            </value>
            <value>
                <fullName>INT High Potential**NEW</fullName>
            </value>
            <value>
                <fullName>INT HVA</fullName>
            </value>
            <value>
                <fullName>INT HVA**NEW</fullName>
            </value>
            <value>
                <fullName>INT No Action Needed</fullName>
            </value>
            <value>
                <fullName>INT NO AM</fullName>
            </value>
            <value>
                <fullName>INT NO AM CXL/Terminated</fullName>
            </value>
            <value>
                <fullName>INT Reseller</fullName>
            </value>
            <value>
                <fullName>INT Strategic</fullName>
            </value>
            <value>
                <fullName>INT Strategic**NEW</fullName>
            </value>
            <value>
                <fullName>Key Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>