force-app/main/default/objects/TC_Account__x/fields/Account_Valuation_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Valuation_c__c</fullName>
    <externalDeveloperName>Account_Valuation__c</externalDeveloperName>
    <inlineHelpText>Roll-Up of P2G Value of OPTYS that have been credited in the last 12 months.</inlineHelpText>
    <label>Account Valuation</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>