force-app/main/default/objects/TC_Account__x/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <externalDeveloperName>AccountNumber</externalDeveloperName>
    <inlineHelpText>What is the BID number for this property?</inlineHelpText>
    <label>BID Number</label>
    <length>40</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>