force-app/main/default/objects/TC_Account__x/fields/Amadeus_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_c__c</fullName>
    <externalDeveloperName>Amadeus__c</externalDeveloperName>
    <label>Amadeus #</label>
    <length>20</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>