force-app/main/default/objects/TC_Account__x/fields/Amadeus_Customer_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Customer_Status_c__c</fullName>
    <externalDeveloperName>Amadeus_Customer_Status__c</externalDeveloperName>
    <inlineHelpText>Is this a Amadeus Customer, Prospect or neither.</inlineHelpText>
    <label>AIP Customer Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>