force-app/main/default/objects/TC_Account__x/fields/Amadeus_FP_Sale_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_FP_Sale_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Amadeus_FP_Sale__c</externalDeveloperName>
    <label>BDEV Sale</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>