force-app/main/default/objects/TC_Account__x/fields/Annual_GDS_Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Annual_GDS_Revenue_c__c</fullName>
    <externalDeveloperName>Annual_GDS_Revenue__c</externalDeveloperName>
    <label>Annual GDS Revenue</label>
    <precision>16</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>