force-app/main/default/objects/TC_Account__x/fields/Assigned_ROM_c__c.field-meta.xml
<CustomField>
    <fullName>Assigned_ROM_c__c</fullName>
    <externalDeveloperName>Assigned_ROM__c</externalDeveloperName>
    <label>Account Manager</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>