force-app/main/default/objects/TC_Account__x/fields/Average_Daily_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Rate_c__c</fullName>
    <externalDeveloperName>Average_Daily_Rate__c</externalDeveloperName>
    <inlineHelpText>This is required to calculate GDS Revenue.  Please enter in USD.</inlineHelpText>
    <label>Average Daily Rate USD</label>
    <precision>16</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>