force-app/main/default/objects/TC_Account__x/fields/BDEV_Account_Tier_c__c.field-meta.xml
<CustomField>
    <fullName>BDEV_Account_Tier_c__c</fullName>
    <externalDeveloperName>BDEV_Account_Tier__c</externalDeveloperName>
    <label>BDEV Account Tier</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>