force-app/main/default/objects/TC_Account__x/fields/BI_Support_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>BI_Support_Manager_c__c</fullName>
    <externalDeveloperName>BI_Support_Manager__c</externalDeveloperName>
    <inlineHelpText>Used only by EMEA to Indicate BI Support Manager.</inlineHelpText>
    <label>BI Support Manager</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>