force-app/main/default/objects/TC_Account__x/fields/BID_c__c.field-meta.xml
<CustomField>
    <fullName>BID_c__c</fullName>
    <externalDeveloperName>BID__c</externalDeveloperName>
    <inlineHelpText>What is the BID number for this property?</inlineHelpText>
    <label>BID</label>
    <length>30</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>