force-app/main/default/objects/TC_Account__x/fields/Billing_Address_Line_2_c__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_2_c__c</fullName>
    <externalDeveloperName>Billing_Address_Line_2__c</externalDeveloperName>
    <label>Billing Address Line 2</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>