force-app/main/default/objects/TC_Account__x/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <externalDeveloperName>BillingCountry</externalDeveloperName>
    <label>Billing Country</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>