force-app/main/default/objects/TC_Account__x/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <externalDeveloperName>BillingPostalCode</externalDeveloperName>
    <label>Billing Zip/Postal Code</label>
    <length>20</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>