force-app/main/default/objects/TC_Account__x/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <externalDeveloperName>BillingState</externalDeveloperName>
    <label>Billing State/Province</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>