force-app/main/default/objects/TC_Account__x/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <externalDeveloperName>BillingStreet</externalDeveloperName>
    <label>Billing Street</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>