force-app/main/default/objects/TC_Account__x/fields/Booking_Engine_Provider_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Engine_Provider_c__c</fullName>
    <externalDeveloperName>Booking_Engine_Provider__c</externalDeveloperName>
    <label>Booking Engine Provider</label>
    <length>50</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>