force-app/main/default/objects/TC_Account__x/fields/Brand_BID_c__c.field-meta.xml
<CustomField>
    <fullName>Brand_BID_c__c</fullName>
    <externalDeveloperName>Brand_BID__c</externalDeveloperName>
    <label>Brand BID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>