force-app/main/default/objects/TC_Account__x/fields/Brand_Central_Revenue_Management_c__c.field-meta.xml
<CustomField>
    <fullName>Brand_Central_Revenue_Management_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Brand_Central_Revenue_Management__c</externalDeveloperName>
    <label>Brand Central Revenue Management</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>