force-app/main/default/objects/TC_Account__x/fields/Child_Risks_c__c.field-meta.xml
<CustomField>
    <fullName>Child_Risks_c__c</fullName>
    <externalDeveloperName>Child_Risks__c</externalDeveloperName>
    <inlineHelpText>Are there are risks with properties associated to this Account?</inlineHelpText>
    <label>Open Risks</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>