force-app/main/default/objects/TC_Account__x/fields/Classic_Record_Link_c__c.field-meta.xml
<CustomField>
    <fullName>Classic_Record_Link_c__c</fullName>
    <externalDeveloperName>Classic_Record_Link__c</externalDeveloperName>
    <label>Classic Record Link</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>