force-app/main/default/objects/TC_Account__x/fields/Closed_Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_Revenue_c__c</fullName>
    <externalDeveloperName>Closed_Revenue__c</externalDeveloperName>
    <inlineHelpText>Summary of Closed Won Opportunities since January 2007.  Based on OPTYs in related list.</inlineHelpText>
    <label>Closed Sales Roll-Up Since 2007</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>