force-app/main/default/objects/TC_Account__x/fields/CM_Link_Impl_Closed_to_CC_Date_c__c.field-meta.xml
<CustomField>
    <fullName>CM_Link_Impl_Closed_to_CC_Date_c__c</fullName>
    <externalDeveloperName>CM_Link_Impl_Closed_to_CC_Date__c</externalDeveloperName>
    <label>CM Link Impl Closed to CC Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>