force-app/main/default/objects/TC_Account__x/fields/Collector_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Collector_Email_c__c</fullName>
    <externalDeveloperName>Collector_Email__c</externalDeveloperName>
    <label>Collector Email</label>
    <length>200</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>