force-app/main/default/objects/TC_Account__x/fields/Collector_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Collector_Name_c__c</fullName>
    <externalDeveloperName>Collector_Name__c</externalDeveloperName>
    <label>Collector Name</label>
    <length>50</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>