force-app/main/default/objects/TC_Account__x/fields/Comments_for_CS_DMSS_c__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_CS_DMSS_c__c</fullName>
    <externalDeveloperName>Comments_for_CS_DMSS__c</externalDeveloperName>
    <inlineHelpText>Please enter in any special processing instructions for CS (Americas) or DMSS (International).  These comments will be emailed to CS/DMSS only when you first save account.  Updates must be mailed directly to CS / DMSS.</inlineHelpText>
    <label>Comments for CS / DMSS</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>