force-app/main/default/objects/TC_Account__x/fields/CPL_Status_c__c.field-meta.xml
<CustomField>
    <fullName>CPL_Status_c__c</fullName>
    <externalDeveloperName>CPL_Status__c</externalDeveloperName>
    <label>CPL Status</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>