force-app/main/default/objects/TC_Account__x/fields/CRS_Contract_End_c__c.field-meta.xml
<CustomField>
    <fullName>CRS_Contract_End_c__c</fullName>
    <externalDeveloperName>CRS_Contract_End__c</externalDeveloperName>
    <label>CRS Contract End</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>