force-app/main/default/objects/TC_Account__x/fields/Date_Account_Removed_From_Credit_Hold_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Removed_From_Credit_Hold_c__c</fullName>
    <externalDeveloperName>Date_Account_Removed_From_Credit_Hold__c</externalDeveloperName>
    <label>Date Credit Hold Lifted</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>