force-app/main/default/objects/TC_Account__x/fields/Demand_Teaser_c__c.field-meta.xml
<CustomField>
    <fullName>Demand_Teaser_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Demand_Teaser__c</externalDeveloperName>
    <label>Demand Teaser</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>