force-app/main/default/objects/TC_Account__x/fields/Digital_Marketing_Analyst_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Analyst_Email_c__c</fullName>
    <externalDeveloperName>Digital_Marketing_Analyst_Email__c</externalDeveloperName>
    <label>Digital Marketing Analyst Email</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>