force-app/main/default/objects/TC_Account__x/fields/Digital_Media_Campaign_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Digital_Media_Campaign_Manager_c__c</fullName>
    <externalDeveloperName>Digital_Media_Campaign_Manager__c</externalDeveloperName>
    <inlineHelpText>Account Digital Media Campaign Manager.</inlineHelpText>
    <label>Digital Media Campaign Manager</label>
    <length>18</length>
    <referenceTo>TC_Account__x</referenceTo>
    <relationshipLabel>TC Accounts</relationshipLabel>
    <relationshipName>TC_Accounts2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>