force-app/main/default/objects/TC_Account__x/fields/Digital_Media_Deliverables_Addons_c__c.field-meta.xml
<CustomField>
    <fullName>Digital_Media_Deliverables_Addons_c__c</fullName>
    <externalDeveloperName>Digital_Media_Deliverables_Addons__c</externalDeveloperName>
    <label>Digital Media Deliverables / Add-ons</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Trip Advisor Check Rates</fullName>
            </value>
            <value>
                <fullName>Add-ons: Monthly Client Calls</fullName>
            </value>
            <value>
                <fullName>Add-ons: Monthly Custom Report</fullName>
            </value>
            <value>
                <fullName>Add-ons: Monthly Standard Report</fullName>
            </value>
            <value>
                <fullName>Add-ons: One Time Client Call</fullName>
            </value>
            <value>
                <fullName>Add-ons: One Time Custom Report</fullName>
            </value>
            <value>
                <fullName>Add-ons: One Time Standard Report</fullName>
            </value>
            <value>
                <fullName>Add-ons: Quarterly Client Calls</fullName>
            </value>
            <value>
                <fullName>Add-ons: Quarterly Custom Report</fullName>
            </value>
            <value>
                <fullName>Add-ons: Quarterly Standard Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>