force-app/main/default/objects/TC_Account__x/fields/DivisionOwner_c__c.field-meta.xml
<CustomField>
    <fullName>DivisionOwner_c__c</fullName>
    <externalDeveloperName>DivisionOwner__c</externalDeveloperName>
    <inlineHelpText>Division* is equal to the Owners division on User record.</inlineHelpText>
    <label>Division*</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>