force-app/main/default/objects/TC_Account__x/fields/DS_Migration_Date_c__c.field-meta.xml
<CustomField>
    <fullName>DS_Migration_Date_c__c</fullName>
    <externalDeveloperName>DS_Migration_Date__c</externalDeveloperName>
    <label>DS Migration Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>