force-app/main/default/objects/TC_Account__x/fields/EZY_ID_c__c.field-meta.xml
<CustomField>
    <fullName>EZY_ID_c__c</fullName>
    <externalDeveloperName>EZY_ID__c</externalDeveloperName>
    <label>CM Hotel ID</label>
    <length>10</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>