force-app/main/default/objects/TC_Account__x/fields/Galileo_Property_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Galileo_Property_Code_c__c</fullName>
    <externalDeveloperName>Galileo_Property_Code__c</externalDeveloperName>
    <label>Galileo Property Code</label>
    <length>20</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>