force-app/main/default/objects/TC_Account__x/fields/GDS_Revenue_Actual_Estimated_Flag_c__c.field-meta.xml
<CustomField>
    <fullName>GDS_Revenue_Actual_Estimated_Flag_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>GDS_Revenue_Actual_Estimated_Flag__c</externalDeveloperName>
    <label>GDS Revenue Actual/Estimated Flag</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>