force-app/main/default/objects/TC_Account__x/fields/GMS_Implementation_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Implementation_Manager_c__c</fullName>
    <externalDeveloperName>GMS_Implementation_Manager__c</externalDeveloperName>
    <label>GMS Implementation Manager</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>