force-app/main/default/objects/TC_Account__x/fields/GMS_Status_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Status_c__c</fullName>
    <externalDeveloperName>GMS_Status__c</externalDeveloperName>
    <inlineHelpText>GMS Product Status</inlineHelpText>
    <label>GMS Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>