force-app/main/default/objects/TC_Account__x/fields/IHOS_Active_c__c.field-meta.xml
<CustomField>
    <fullName>IHOS_Active_c__c</fullName>
    <externalDeveloperName>IHOS_Active__c</externalDeveloperName>
    <label>IHOS Active</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>